--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,8 @@
 		<add key="ida:ClientId" value="a40cb2ba-6beb-4c96-a8e7-7cb2b56a24f0" />
 		<!-- Client ID Server-->
 		<!--<add key="ida:ClientId" value="e3b5c754-b0d5-44f2-854f-22e142ac4801" />-->
+		<!-- Client ID VLU-->
+		<!--<add key="ida:ClientId" value="b3066ba4-0ae9-49db-8e52-4b02435439d4" />-->
 		<add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
 		<add key="ida:Domain" value="vlu.edu.vn" />
 		<add key="ida:TenantId" value="3011a54b-0a5d-4929-bf02-a00787877c6a" />
