--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -106,6 +106,7 @@
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.SqlServer.Compact.4.0.8876.1\lib\net40\System.Data.SqlServerCe.dll</HintPath>
     </Reference>
@@ -306,6 +307,9 @@
     <Compile Include="Models\CongViec.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Connect.cs">
+      <DependentUpon>vanlanguniAPI.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\DanhGiaPhongVan.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -366,6 +370,21 @@
     </Compile>
     <Compile Include="Models\UngTuyenTroGiang.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\vanlanguniAPI.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>vanlanguniAPI.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\vanlanguniAPI.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>vanlanguniAPI.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\vanlanguniAPI.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>vanlanguniAPI.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -501,6 +520,16 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Content Include="Models\vanlanguniAPI.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>vanlanguniAPI.edmx</DependentUpon>
+      <LastGenOutput>vanlanguniAPI.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\vanlanguniAPI.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>vanlanguniAPI.edmx</DependentUpon>
+      <LastGenOutput>vanlanguniAPI.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -527,6 +556,13 @@
     <Content Include="Validation\department\faculty\edit.js" />
     <Content Include="Views\TermAndMajor\Faculty.cshtml" />
     <Content Include="Views\TermAndMajor\_EditFaculty.cshtml" />
+    <EntityDeploy Include="Models\vanlanguniAPI.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>vanlanguniAPI.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\vanlanguniAPI.edmx.diagram">
+      <DependentUpon>vanlanguniAPI.edmx</DependentUpon>
+    </Content>
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
