--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -551,6 +551,7 @@
     <Content Include="Validation\department\register\delete.js" />
     <Content Include="Validation\department\register\edit.js" />
     <Content Include="Validation\department\suggested\accepted.js" />
+    <Content Include="Validation\SVandTA\filterviewapply.js" />
     <Content Include="Validation\teacher\classsection\DeXuatLHP.js" />
     <Content Include="Validation\teacher\classsection\viewTaskList.js" />
     <Content Include="Validation\teacher\teachingassistant\taskDetail.js" />
@@ -576,6 +577,8 @@
     <Content Include="Views\ClassSection\_TaskList.cshtml" />
     <Content Include="Views\TeachingAssistant\_TaskDetailGV.cshtml" />
     <Content Include="Views\TeachingAssistant\_DetailAdvances.cshtml" />
+    <Content Include="Views\TeachingAssistant\_FilterParentApply.cshtml" />
+    <Content Include="Views\TeachingAssistant\_FilterChildApply.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
