--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -552,6 +552,8 @@
     <Content Include="Validation\department\register\edit.js" />
     <Content Include="Validation\department\suggested\accepted.js" />
     <Content Include="Validation\SVandTA\filterviewapply.js" />
+    <Content Include="Validation\SVandTA\submitapply.js" />
+    <Content Include="Validation\SVandTA\openapply.js" />
     <Content Include="Validation\teacher\classsection\DeXuatLHP.js" />
     <Content Include="Validation\teacher\classsection\viewTaskList.js" />
     <Content Include="Validation\teacher\teachingassistant\taskDetail.js" />
@@ -579,6 +581,7 @@
     <Content Include="Views\TeachingAssistant\_DetailAdvances.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterParentApply.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterChildApply.cshtml" />
+    <Content Include="Views\TeachingAssistant\_OpenApply.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
