Add function update task when suggest accepted yet

--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -555,6 +555,7 @@
     <Content Include="Validation\SVandTA\submitapply.js" />
     <Content Include="Validation\SVandTA\openapply.js" />
     <Content Include="Validation\teacher\classsection\DeXuatLHP.js" />
+    <Content Include="Validation\teacher\classsection\updatetask.js" />
     <Content Include="Validation\teacher\classsection\viewTaskList.js" />
     <Content Include="Validation\teacher\teachingassistant\taskDetail.js" />
     <Content Include="Views\TermAndMajor\Faculty.cshtml" />
@@ -576,12 +577,13 @@
     <Content Include="Views\TeachingAssistant\_EditRegister.cshtml" />
     <Content Include="Views\ClassSection\_AddDeXuat.cshtml" />
     <Content Include="Views\ClassSection\_LoadSyncTask.cshtml" />
-    <Content Include="Views\ClassSection\_TaskList.cshtml" />
+    <Content Include="Views\ClassSection\_TaskListOnlyView.cshtml" />
     <Content Include="Views\TeachingAssistant\_TaskDetailGV.cshtml" />
     <Content Include="Views\TeachingAssistant\_DetailAdvances.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterParentApply.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterChildApply.cshtml" />
     <Content Include="Views\TeachingAssistant\_OpenApply.cshtml" />
+    <Content Include="Views\ClassSection\_TaskListViewEdit.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
