--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -584,6 +584,7 @@
     <Content Include="Views\TeachingAssistant\_FilterChildApply.cshtml" />
     <Content Include="Views\TeachingAssistant\_OpenApply.cshtml" />
     <Content Include="Views\ClassSection\_TaskListViewEdit.cshtml" />
+    <Content Include="Views\TeachingAssistant\_OpenTaskDetailApply.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
