--- a/QuanLyCongTacTroGiangKhoaCNTTTest/QuanLyCongTacTroGiangKhoaCNTTTest.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTTTest/QuanLyCongTacTroGiangKhoaCNTTTest.csproj
@@ -93,6 +93,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassSectionTest.cs" />
     <Compile Include="TeachingAssistantTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
