Add function F6.1 Xem danh sách trợ giảng, F6.2 Xem thông tin ứng tuyển trợ giảng, F6.4 Xuất danh sách trợ giảng, F6.6 Ghi nhận kết quả phỏng vấn.

--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -547,16 +547,24 @@
     <Content Include="Validation\department\faculty\add.js" />
     <Content Include="Validation\department\faculty\delete.js" />
     <Content Include="Validation\department\faculty\edit.js" />
-    <Content Include="Validation\department\registered\accepted.js" />
+    <Content Include="Validation\teacher\registereds\phongvan.js" />
+    <Content Include="Validation\teacher\registereds\detail.js" />
+    <Content Include="Validation\teacher\registereds\filter.js" />
+    <Content Include="Validation\department\registered\detailAndAccepted.js" />
+    <Content Include="Validation\department\registered\exportfile.js" />
     <Content Include="Validation\department\registered\filter.js" />
     <Content Include="Validation\department\register\add.js" />
     <Content Include="Validation\department\register\delete.js" />
     <Content Include="Validation\department\register\edit.js" />
+    <Content Include="Validation\department\suggested\editstateupdate.js" />
     <Content Include="Validation\department\suggested\accepted.js" />
+    <Content Include="Validation\department\suggested\filter.js" />
     <Content Include="Validation\SVandTA\filterviewapply.js" />
     <Content Include="Validation\SVandTA\submitapply.js" />
     <Content Include="Validation\SVandTA\openapply.js" />
     <Content Include="Validation\teacher\classsection\DeXuatLHP.js" />
+    <Content Include="Validation\teacher\registereds\exportfile.js" />
+    <Content Include="Validation\teacher\classsection\filter.js" />
     <Content Include="Validation\teacher\classsection\updatetask.js" />
     <Content Include="Validation\teacher\classsection\viewTaskList.js" />
     <Content Include="Validation\teacher\teachingassistant\taskDetail.js" />
@@ -589,6 +597,13 @@
     </Content>
     <Content Include="Views\TeachingAssistant\_DetailRegistered.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterRegistered.cshtml" />
+    <Content Include="Views\TeachingAssistant\_FilterRegistereds.cshtml" />
+    <Content Include="Views\TeachingAssistant\_DetailRegistereds.cshtml" />
+    <Content Include="Views\TeachingAssistant\_PhongVanTA.cshtml" />
+    <Content Include="Views\TeachingAssistant\_FilterAdvances.cshtml" />
+    <Content Include="Views\ClassSection\_FilterSection.cshtml" />
+    <Content Include="Views\TeachingAssistant\_ExportRegistered.cshtml" />
+    <Content Include="Views\TeachingAssistant\_ExportRegistereds.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
