--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -270,6 +270,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AssignmentController.cs" />
     <Compile Include="Controllers\ClassSectionController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\FacultysController.cs" />
@@ -591,6 +592,7 @@
     <Content Include="Views\TimeTable\_FilterParentDataGV.cshtml" />
     <Content Include="Views\TimeTable\_FilterDataGV.cshtml" />
     <Content Include="Views\TimeTable\_IndexTA.cshtml" />
+    <Content Include="Views\Assignment\Assgined.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -680,7 +682,6 @@
     <Content Include="Views\TeachingAssistant\ResultApply.cshtml" />
     <Content Include="Views\ClassSection\QuanLyLopHoc.cshtml" />
     <Content Include="Views\TeachingAssistant\_TaskListGV.cshtml" />
-    <Content Include="Views\TeachingAssistant\Assgined.cshtml" />
     <Content Include="Views\TeachingAssistant\Registereds.cshtml" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
     <None Include="_bin_deployableAssemblies\x86\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
