--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -334,6 +334,9 @@
     <Compile Include="Models\Khoa.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\LichHoc.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\LopHocPhan.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -533,6 +536,7 @@
     <Content Include="Validation\teacher\Assignment\submitAssign.js" />
     <Content Include="Validation\teacher\Assignment\openAssgin.js" />
     <Content Include="Validation\teacher\Assignment\filter.js" />
+    <Content Include="Validation\teacher\classsection\danhSachVaDiemSinhVien.js" />
     <Content Include="Validation\teacher\reviewtask\danhgia.js" />
     <Content Include="Validation\teacher\reviewtask\filter.js" />
     <Content Include="Validation\teacher\registereds\phongvan.js" />
@@ -583,13 +587,6 @@
     <Content Include="Views\ReviewTask\_FilterCongViec.cshtml" />
     <Content Include="Views\ReviewTask\_OpenEditReviewTask.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterResultApply.cshtml" />
-    <EntityDeploy Include="Models\Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
     <Content Include="Views\Term\Semester.cshtml" />
     <Content Include="Views\Term\_EditSemester.cshtml" />
     <Content Include="Views\Majors\_EditMajor.cshtml" />
@@ -604,6 +601,14 @@
     <Content Include="Views\Assignment\_ListTA.cshtml" />
     <Content Include="Views\Statisticals\Statistical.cshtml" />
     <Content Include="Views\Statisticals\_FilterStatistical.cshtml" />
+    <Content Include="Views\ClassManagement\_ClassList.cshtml" />
+    <EntityDeploy Include="Models\Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -699,7 +704,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\ClassManagement\" />
     <Folder Include="Views\Notifications\" />
   </ItemGroup>
   <ItemGroup>
