Add function thong ke

--- a/Web.config
+++ b/Web.config
@@ -133,8 +133,7 @@
 	<connectionStrings>
 		<add name="ExcelConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0}; Extended Properties='Excel 12.0 Xml; HDR=YES'" />
 		<add name="IdentityConnection" connectionString="data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CAP24Team02;persist security info=True;user id=CAP24Team02;password=CAP24Team02;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-		<add name="CongTacTroGiangKhoaCNTTEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CAP24Team02;persist security info=True;user id=CAP24Team02;password=CAP24Team02;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+	<add name="CongTacTroGiangKhoaCNTTEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CAP24Team02;persist security info=True;user id=CAP24Team02;password=CAP24Team02;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 	<entityFramework>
 		<providers>
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
