--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -10,20 +10,16 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
 	<appSettings>
-		<add key="webpages:Version" value="3.0.0.0" />
-		<add key="webpages:Enabled" value="false" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<!-- Client ID Local-->
-		<add key="ida:ClientId" value="a40cb2ba-6beb-4c96-a8e7-7cb2b56a24f0" />
-		<!-- Client ID Server-->
-		<!--<add key="ida:ClientId" value="e3b5c754-b0d5-44f2-854f-22e142ac4801" />-->
-		<!-- Client ID VLU-->
-		<!--<add key="ida:ClientId" value="b3066ba4-0ae9-49db-8e52-4b02435439d4" />-->
-		<add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
-		<add key="ida:Domain" value="vlu.edu.vn" />
-		<add key="ida:TenantId" value="3011a54b-0a5d-4929-bf02-a00787877c6a" />
-	</appSettings>
+  <add key="webpages:Version" value="3.0.0.0" />
+  <add key="webpages:Enabled" value="false" />
+  <add key="ClientValidationEnabled" value="true" />
+  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <add key="ida:ClientId" value="a40cb2ba-6beb-4c96-a8e7-7cb2b56a24f0" />
+  <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
+  <add key="ida:Domain" value="vlu.edu.vn" />
+  <add key="ida:TenantId" value="3011a54b-0a5d-4929-bf02-a00787877c6a" />
+  <add key="RemunerationPrice" value="45000" />
+ </appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2">
 			<assemblies>
