--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -542,6 +542,7 @@
     <Content Include="Validation\teacher\classsection\diemDanh.js" />
     <Content Include="Validation\teacher\classsection\danhSachSinhVien.js" />
     <Content Include="Validation\teacher\classsection\exportfile.js" />
+    <Content Include="Validation\teacher\classsection\filterQuanLyLopHoc.js" />
     <Content Include="Validation\teacher\classsection\import.js" />
     <Content Include="Validation\teacher\reviewtask\danhgia.js" />
     <Content Include="Validation\teacher\reviewtask\filter.js" />
@@ -618,6 +619,7 @@
     <Content Include="Views\ClassManagement\_Export.cshtml" />
     <Content Include="Views\Statisticals\StatisticalRemuneration.cshtml" />
     <Content Include="Views\Statisticals\_FilterRemuneration.cshtml" />
+    <Content Include="Views\ClassSection\_FilterQuanLyLopHoc.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
