--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -531,6 +531,7 @@
     <Content Include="Validation\department\faculty\add.js" />
     <Content Include="Validation\department\faculty\delete.js" />
     <Content Include="Validation\department\faculty\edit.js" />
+    <Content Include="Validation\department\statisticals\exportfile.js" />
     <Content Include="Validation\department\statisticals\thulao\cauhinh.js" />
     <Content Include="Validation\department\statisticals\thulao\filter.js" />
     <Content Include="Validation\department\statisticals\trogiang\filter.js" />
@@ -620,6 +621,8 @@
     <Content Include="Views\Statisticals\StatisticalRemuneration.cshtml" />
     <Content Include="Views\Statisticals\_FilterRemuneration.cshtml" />
     <Content Include="Views\ClassSection\_FilterQuanLyLopHoc.cshtml" />
+    <Content Include="Views\Statisticals\_ExportTA02.cshtml" />
+    <Content Include="Views\Statisticals\_ExportTA03.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
