--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -270,6 +270,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdvancesClassectionController.cs" />
+    <Compile Include="Controllers\ApplyTeachingAssistantController.cs" />
     <Compile Include="Controllers\AssignmentController.cs" />
     <Compile Include="Controllers\ClassManagementController.cs" />
     <Compile Include="Controllers\ClassSectionController.cs" />
@@ -278,8 +280,11 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MajorsController.cs" />
     <Compile Include="Controllers\NotificationsController.cs" />
+    <Compile Include="Controllers\RegisterTeachingAssistantController.cs" />
+    <Compile Include="Controllers\ResultApplyTeachingAssistantController.cs" />
     <Compile Include="Controllers\ReviewTaskController.cs" />
     <Compile Include="Controllers\StatisticalsController.cs" />
+    <Compile Include="Controllers\TaskManagementController.cs" />
     <Compile Include="Controllers\TeachingAssistantController.cs" />
     <Compile Include="Controllers\TermController.cs" />
     <Compile Include="Controllers\TimeTableController.cs" />
@@ -495,6 +500,7 @@
     <Content Include="Content\assets\libs\tiny-slider\dist\min\tiny-slider.js" />
     <Content Include="Content\assets\libs\tiny-slider\dist\tiny-slider.css" />
     <Content Include="Content\assets\libs\tippy.js\dist\tippy-bundle.umd.min.js" />
+    <Content Include="Content\assets\libs\XLSX-Full\xlsx.full.min.js" />
     <Content Include="Content\Christams\christams_01.gif" />
     <Content Include="Content\img\icon-vlu.png" />
     <Content Include="Content\img\img_login_background.jpg" />
@@ -540,6 +546,7 @@
     <Content Include="Validation\teacher\Assignment\submitAssign.js" />
     <Content Include="Validation\teacher\Assignment\openAssgin.js" />
     <Content Include="Validation\teacher\Assignment\filter.js" />
+    <Content Include="Validation\teacher\classsection\ketQuaDiemDanh.js" />
     <Content Include="Validation\teacher\classsection\diemDanh.js" />
     <Content Include="Validation\teacher\classsection\danhSachSinhVien.js" />
     <Content Include="Validation\teacher\classsection\exportfile.js" />
@@ -569,32 +576,21 @@
     <Content Include="Validation\teacher\classsection\viewTaskList.js" />
     <Content Include="Validation\teacher\teachingassistant\filterTask.js" />
     <Content Include="Validation\teacher\teachingassistant\taskDetail.js" />
-    <Content Include="Views\TeachingAssistant\_EditRegister.cshtml" />
     <Content Include="Views\ClassSection\_AddDeXuat.cshtml" />
     <Content Include="Views\ClassSection\_LoadSyncTask.cshtml" />
     <Content Include="Views\ClassSection\_TaskListOnlyView.cshtml" />
-    <Content Include="Views\TeachingAssistant\_TaskDetail.cshtml" />
-    <Content Include="Views\TeachingAssistant\_DetailAdvances.cshtml" />
-    <Content Include="Views\TeachingAssistant\_FilterParentApply.cshtml" />
-    <Content Include="Views\TeachingAssistant\_FilterChildApply.cshtml" />
-    <Content Include="Views\TeachingAssistant\_OpenApply.cshtml" />
     <Content Include="Views\ClassSection\_TaskListViewEdit.cshtml" />
-    <Content Include="Views\TeachingAssistant\_OpenTaskDetailApply.cshtml" />
     <Content Include="Views\TeachingAssistant\_DetailRegistered.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterRegistered.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterRegistereds.cshtml" />
     <Content Include="Views\TeachingAssistant\_DetailRegistereds.cshtml" />
     <Content Include="Views\TeachingAssistant\_PhongVanTA.cshtml" />
-    <Content Include="Views\TeachingAssistant\_FilterAdvances.cshtml" />
     <Content Include="Views\ClassSection\_FilterSection.cshtml" />
     <Content Include="Views\TeachingAssistant\_ExportRegistered.cshtml" />
     <Content Include="Views\TeachingAssistant\_ExportRegistereds.cshtml" />
-    <Content Include="Views\TeachingAssistant\_FilterTaskList.cshtml" />
-    <Content Include="Views\TeachingAssistant\_FilterHocKyTaskListGV.cshtml" />
     <Content Include="Views\ReviewTask\Index.cshtml" />
     <Content Include="Views\ReviewTask\_FilterCongViec.cshtml" />
     <Content Include="Views\ReviewTask\_OpenEditReviewTask.cshtml" />
-    <Content Include="Views\TeachingAssistant\_FilterResultApply.cshtml" />
     <Content Include="Views\Term\Semester.cshtml" />
     <Content Include="Views\Term\_EditSemester.cshtml" />
     <Content Include="Views\Majors\_EditMajor.cshtml" />
@@ -623,6 +619,26 @@
     <Content Include="Views\ClassSection\_FilterQuanLyLopHoc.cshtml" />
     <Content Include="Views\Statisticals\_ExportTA02.cshtml" />
     <Content Include="Views\Statisticals\_ExportTA03.cshtml" />
+    <Content Include="Views\ApplyTeachingAssistant\_Apply.cshtml" />
+    <Content Include="Views\ApplyTeachingAssistant\_FilterChildApply.cshtml" />
+    <Content Include="Views\ApplyTeachingAssistant\_FilterParentApply.cshtml" />
+    <Content Include="Views\ApplyTeachingAssistant\_OpenApply.cshtml" />
+    <Content Include="Views\ApplyTeachingAssistant\_OpenTaskDetailApply.cshtml" />
+    <Content Include="Views\ApplyTeachingAssistant\Apply.cshtml" />
+    <Content Include="Views\ResultApplyTeachingAssistant\_FilterResultApply.cshtml" />
+    <Content Include="Views\ResultApplyTeachingAssistant\ResultApply.cshtml" />
+    <Content Include="Views\RegisterTeachingAssistant\_EditRegister.cshtml" />
+    <Content Include="Views\RegisterTeachingAssistant\Register.cshtml" />
+    <Content Include="Views\AdvancesClassection\_DetailAdvances.cshtml" />
+    <Content Include="Views\AdvancesClassection\Advances.cshtml" />
+    <Content Include="Views\AdvancesClassection\_FilterAdvances.cshtml" />
+    <Content Include="Views\TaskManagement\TaskList.cshtml" />
+    <Content Include="Views\TaskManagement\_TaskListTA.cshtml" />
+    <Content Include="Views\TaskManagement\_TaskListGV.cshtml" />
+    <Content Include="Views\TaskManagement\_TaskDetail.cshtml" />
+    <Content Include="Views\TaskManagement\_FilterTaskList.cshtml" />
+    <Content Include="Views\TaskManagement\_FilterHocKyTaskListGV.cshtml" />
+    <Content Include="Views\ClassManagement\_ResultRollcall.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -696,22 +712,14 @@
     <Content Include="Views\Users\_Index.cshtml" />
     <Content Include="Views\Users\_EditUser.cshtml" />
     <Content Include="Views\Shared\_StudentLayout.cshtml" />
-    <Content Include="Views\TeachingAssistant\Register.cshtml" />
     <Content Include="Views\Shared\_DepartmentLayout.cshtml" />
     <Content Include="Views\ClassSection\Index.cshtml" />
     <Content Include="Views\Shared\_TeacherLayout.cshtml" />
     <Content Include="Views\Users\_Filter.cshtml" />
-    <Content Include="Views\TeachingAssistant\Apply.cshtml" />
-    <Content Include="Views\TeachingAssistant\TaskList.cshtml" />
-    <Content Include="Views\TeachingAssistant\_Apply.cshtml" />
     <Content Include="Views\Shared\_TALayout.cshtml" />
-    <Content Include="Views\TeachingAssistant\_TaskListTA.cshtml" />
-    <Content Include="Views\TeachingAssistant\Advances.cshtml" />
     <Content Include="Views\TeachingAssistant\Registered.cshtml" />
     <Content Include="Views\TimeTable\_IndexGV.cshtml" />
-    <Content Include="Views\TeachingAssistant\ResultApply.cshtml" />
     <Content Include="Views\ClassSection\QuanLyLopHoc.cshtml" />
-    <Content Include="Views\TeachingAssistant\_TaskListGV.cshtml" />
     <Content Include="Views\TeachingAssistant\Registereds.cshtml" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
     <None Include="_bin_deployableAssemblies\x86\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
