--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\FacultysController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InterviewsController.cs" />
     <Compile Include="Controllers\MajorsController.cs" />
     <Compile Include="Controllers\NotificationsController.cs" />
     <Compile Include="Controllers\RegisterTeachingAssistantController.cs" />
@@ -538,7 +539,7 @@
     <Content Include="Validation\department\faculty\delete.js" />
     <Content Include="Validation\department\faculty\edit.js" />
     <Content Include="Validation\department\statisticals\exportfile.js" />
-    <Content Include="Validation\department\statisticals\thulao\cauhinh.js" />
+    <Content Include="Validation\department\statisticals\cauhinh.js" />
     <Content Include="Validation\department\statisticals\thulao\filter.js" />
     <Content Include="Validation\department\statisticals\trogiang\filter.js" />
     <Content Include="Validation\SVandTA\cancelapply.js" />
@@ -584,7 +585,6 @@
     <Content Include="Views\TeachingAssistant\_FilterRegistered.cshtml" />
     <Content Include="Views\TeachingAssistant\_FilterRegistereds.cshtml" />
     <Content Include="Views\TeachingAssistant\_DetailRegistereds.cshtml" />
-    <Content Include="Views\TeachingAssistant\_PhongVanTA.cshtml" />
     <Content Include="Views\ClassSection\_FilterSection.cshtml" />
     <Content Include="Views\TeachingAssistant\_ExportRegistered.cshtml" />
     <Content Include="Views\TeachingAssistant\_ExportRegistereds.cshtml" />
@@ -639,6 +639,8 @@
     <Content Include="Views\TaskManagement\_FilterTaskList.cshtml" />
     <Content Include="Views\TaskManagement\_FilterHocKyTaskListGV.cshtml" />
     <Content Include="Views\ClassManagement\_ResultRollcall.cshtml" />
+    <Content Include="Views\Interviews\_Interview.cshtml" />
+    <Content Include="Views\Interviews\_Export.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
